[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/scenes/login_register.gd" type="Script" id=1]

[node name="LoginRegister" type="Node2D"]
script = ExtResource( 1 )

[node name="ErrorMessage" type="Label" parent="."]
margin_left = 600.0
margin_top = 545.0
margin_right = 900.0
margin_bottom = 595.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "ERRR"
align = 1
valign = 1

[node name="SuccessMessage" type="Label" parent="."]
margin_left = 600.0
margin_top = 545.0
margin_right = 900.0
margin_bottom = 595.0
custom_colors/font_color = Color( 0, 1, 0.133333, 1 )
text = "ERRR"
align = 1
valign = 1

[node name="Login" type="Node2D" parent="."]

[node name="Username" type="LineEdit" parent="Login"]
margin_left = 600.0
margin_top = 310.0
margin_right = 900.0
margin_bottom = 360.0
placeholder_text = "Email / Username"

[node name="Password" type="LineEdit" parent="Login"]
margin_left = 600.0
margin_top = 375.0
margin_right = 900.0
margin_bottom = 425.0
rect_pivot_offset = Vector2( -239, -250 )
secret = true
placeholder_text = "Password"

[node name="LoginBtn" type="Button" parent="Login"]
anchor_left = 0.545
anchor_right = 0.545
margin_left = 600.0
margin_top = 440.0
margin_right = 900.0
margin_bottom = 500.0
text = "LOG IN"

[node name="RegisterBtn" type="Button" parent="Login"]
margin_left = 600.0
margin_top = 515.0
margin_right = 900.0
margin_bottom = 545.0
text = "Does not have an account? Register!"

[node name="Register" type="Node2D" parent="."]
visible = false

[node name="Email" type="LineEdit" parent="Register"]
margin_left = 600.0
margin_top = 245.0
margin_right = 900.0
margin_bottom = 295.0
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="Register"]
margin_left = 600.0
margin_top = 310.0
margin_right = 900.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( -239, -250 )
secret = true
placeholder_text = "Password"

[node name="Username" type="LineEdit" parent="Register"]
margin_left = 600.0
margin_top = 375.0
margin_right = 900.0
margin_bottom = 425.0
placeholder_text = "Username (Optional)"

[node name="RegisterBtn" type="Button" parent="Register"]
margin_left = 600.0
margin_top = 440.0
margin_right = 900.0
margin_bottom = 500.0
text = "REGISTER"

[node name="LoginBtn" type="Button" parent="Register"]
margin_left = 600.0
margin_top = 515.0
margin_right = 900.0
margin_bottom = 545.0
text = "Already have an account? Log in!"
